# TurboOverCurry

./: Cargo.toml  README.md
.github/workflows/: rust_build.yml
TurboOverCurryRomfs/fighter/common/param/: item.prc
TurboOverCurryRomfs/item/curry/model/body/c00/: model.nuanmb
TurboOverCurryRomfs/item/curry/script/animcmd/body/: effect.lc  game.lc  sound.lc
TurboOverCurryRomfs/item/curryshot/script/animcmd/body/: effect.lc  game.lc  sound.lc
src/: effect.rs  lib.rs  once_per_frame.rs  utils.rs  vars.rs
src/acmd/: mod.rs
src/once_per_frame/: mod.rs
