[package]
name = "TurboOverCurry"
version = "0.1.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"
plugin-dependencies = [
    { name = "libacmd_hook.nro", url = "https://github.com/ultimate-research/acmd_hook/releases/download/master/libacmd_hook.nro" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true